--- a/src/app/pages/feature/editfeature/editfeature.page.html
+++ b/src/app/pages/feature/editfeature/editfeature.page.html
@@ -542,7 +542,7 @@
         <div *ngIf="item === 10370"> <!--References-->
           <ion-item lines="none">
             <ion-reorder slot="start"><ion-icon name="menu"></ion-icon></ion-reorder>
-            <div class="moment-label"> <ion-icon class="side-icon" color="grey" name="jet"></ion-icon></div>
+            <div class="moment-label"> <ion-icon class="side-icon" color="grey" name="link"></ion-icon></div>
             <div class="moment-input">{{childActivityLabel}}</div>
             <ion-buttons slot="end" [hidden]="!editTemplate" class="ion-no-margin">
               <ion-button fill="clear" (click)="removeComponent(i, item)" class="close-button"><ion-icon name="close" color="grey"></ion-icon></ion-button>
