--- a/src/app/pages/user/dashboard/dashboard.page.scss
+++ b/src/app/pages/user/dashboard/dashboard.page.scss
@@ -524,6 +524,7 @@ app-dashboard {
   .section {
     --min-height: 26px;
     --background: transparent;
+    --inner-padding-end: 0;
 
     .section-label {
       font-size: 15px;
