improve momentService.share() logic
1.8.9 (1)

--- a/src/app/pages/group/groupchat/groupchat.page.html
+++ b/src/app/pages/group/groupchat/groupchat.page.html
@@ -475,7 +475,7 @@
                   </div>
                 </ion-card-header>
                 <div class="program-type"><ion-badge color="button1">{{moment.resource['en-US'].value[0]}}</ion-badge></div>
-                <div class="program-name light">{{moment.calendar.title}}</div>
+                <div class="program-name light">{{moment.matrix_string[0][0]}}</div>
                 <ion-button class="remove-moment ion-no-padding ion-no-margin" (click)="removeMoment(i)" fill="clear" size="small">
                   <ion-icon name="close" color="secondary"></ion-icon>
                 </ion-button>
