--- a/src/app/pages/feature/createfeature/createfeature.page.html
+++ b/src/app/pages/feature/createfeature/createfeature.page.html
@@ -35,20 +35,20 @@
             <ion-grid>
               <ion-row class="ion-justify-content-center ion-align-items-center">
                 <ion-col class="ion-align-self-center" *ngFor="let referenceActivity of referenceActivities; index as j; trackBy: customTrackBy" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="2">
-                  <ion-card class="program-card" (click)="openPlanModule(j)">
+                  <ion-card class="program-card" (click)="openReference(j)">
                     <ion-card-header class="ion-no-padding">
                       <div class="program-photo-container">
                         <ion-img class="program-photo" [src]="(referenceActivity.assets && referenceActivity.assets[0]) | background: referenceActivity._id"></ion-img>
                       </div>
                     </ion-card-header>
                     <div class="program-name light">{{referenceActivity.matrix_string[0][0]}}</div>
-                    <ion-button class="remove-moment ion-no-padding ion-no-margin" (click)="removePlanItem($event, j)" fill="clear" size="small">
+                    <ion-button class="remove-moment ion-no-padding ion-no-margin" (click)="removeReference($event, j)" fill="clear" size="small">
                       <ion-icon name="close" color="secondary"></ion-icon>
                     </ion-button>
                   </ion-card>
                 </ion-col>
                 <ion-col class="ion-align-self-center" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="2">
-                  <ion-card class="program-card" (click)="addPlanItem()">
+                  <ion-card class="program-card" (click)="addReference()">
                     <ion-card-header class="ion-no-padding" color="lightgrey">
                       <ion-row class="program-photo-container ion-justify-content-center ion-align-items-center">
                         <ion-icon name="add" color="darkgrey"></ion-icon>
@@ -114,20 +114,20 @@
             <ion-grid>
               <ion-row class="ion-justify-content-center ion-align-items-center">
                 <ion-col class="ion-align-self-center" *ngFor="let referenceActivity of referenceActivities; index as j; trackBy: customTrackBy" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="2">
-                  <ion-card class="program-card" (click)="openPlanModule(j)">
+                  <ion-card class="program-card" (click)="openReference(j)">
                     <ion-card-header class="ion-no-padding">
                       <div class="program-photo-container">
                         <ion-img class="program-photo" [src]="(referenceActivity.assets && referenceActivity.assets[0]) | background: referenceActivity._id"></ion-img>
                       </div>
                     </ion-card-header>
                     <div class="program-name light">{{referenceActivity.matrix_string[0][0]}}</div>
-                    <ion-button class="remove-moment ion-no-padding ion-no-margin" (click)="removePlanItem($event, j)" fill="clear" size="small">
+                    <ion-button class="remove-moment ion-no-padding ion-no-margin" (click)="removeReference($event, j)" fill="clear" size="small">
                       <ion-icon name="close" color="secondary"></ion-icon>
                     </ion-button>
                   </ion-card>
                 </ion-col>
                 <ion-col class="ion-align-self-center" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="2">
-                  <ion-card class="program-card" (click)="addPlanItem()">
+                  <ion-card class="program-card" (click)="addReference()">
                     <ion-card-header class="ion-no-padding" color="lightgrey">
                       <ion-row class="program-photo-container ion-justify-content-center ion-align-items-center">
                         <ion-icon name="add" color="darkgrey"></ion-icon>
