--- a/src/app/pages/group/groupchat/groupchat.page.html
+++ b/src/app/pages/group/groupchat/groupchat.page.html
@@ -308,15 +308,15 @@
         <div class="moment right" slot="end" *ngIf="message.moment && message.moment.resource && message.moment.resource.field === 'Contact'" >
           <div *ngIf="message.moment.matrix_number[0][0] === 0" (click)="prepareToShareContactInfo($event)" class="ion-text-wrap">
             <ion-icon name="book" large></ion-icon>
-            <ion-label color="dark" [innerHTML]="message.moment.resource['en-US'].matrix_string[0][7] + ' ' + chatService.currentChatProps[propIndex].name"></ion-label>
+            <ion-label color="dark" class="message" [innerHTML]="message.moment.resource['en-US'].matrix_string[0][7] + ' ' + chatService.currentChatProps[propIndex].name"></ion-label>
           </div>
           <div *ngIf="message.moment.matrix_number[0][0] === 1" (click)="prepareToShareContactInfo($event)" class="ion-text-wrap">
             <ion-icon name="book" large></ion-icon>
-            <ion-label color="dark" [innerHTML]="message.moment.resource['en-US'].matrix_string[0][5] + ' ' + chatService.currentChatProps[propIndex].name"></ion-label>
+            <ion-label color="dark" class="message" [innerHTML]="message.moment.resource['en-US'].matrix_string[0][5] + ' ' + chatService.currentChatProps[propIndex].name"></ion-label>
           </div>
           <div *ngIf="message.moment.matrix_number[0][0] === 2" (click)="seeUserInfo($event, chatService.currentChatProps[propIndex].recipient)" class="ion-text-wrap">
             <ion-icon name="book" large></ion-icon>
-            <ion-label color="dark" [innerHTML]="message.moment.resource['en-US'].matrix_string[0][9] + ' ' + chatService.currentChatProps[propIndex].name"></ion-label>
+            <ion-label color="dark" class="message" [innerHTML]="message.moment.resource['en-US'].matrix_string[0][9] + ' ' + chatService.currentChatProps[propIndex].name"></ion-label>
           </div>
         </div>
         <!-- Others: Including All Future Features Displaying Basic Info -->
