--- a/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.html
+++ b/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.html
@@ -9,6 +9,9 @@
     <ion-title *ngIf="step === 1 && categoryId === '5e9fe35cc8bf1a622fec69d7'">Choose a Group Type</ion-title>
     <ion-title *ngIf="step === 1 && categoryId === '5c915475e172e4e64590e348'">Choose a Program Type</ion-title>
     <ion-title *ngIf="step === 1 && categoryId === '5c915324e172e4e64590e346'">Choose a Community</ion-title>
+    <ion-title *ngIf="step === 1 && categoryId === '5c915476e172e4e64590e349'">Choose a Plan</ion-title>
+    <ion-title *ngIf="step === 1 && categoryId === '5e1bbda67b00ea76b75e5a73'">Choose a Content</ion-title>
+    <ion-title *ngIf="step === 1 && categoryId === '5e17acd47b00ea76b75e5a71'">Choose an Onboarding Process</ion-title>
 
     <ion-title *ngIf="step > 1">{{selectedMoments[0].matrix_string[0][0]}}</ion-title>
   </ion-toolbar>
