--- a/src/app/pages/feature/editfeature/editfeature.page.html
+++ b/src/app/pages/feature/editfeature/editfeature.page.html
@@ -143,38 +143,44 @@
               <ion-button fill="clear" (click)="removeComponent(i, item)" class="close-button"><ion-icon name="close" color="grey"></ion-icon></ion-button>
             </ion-buttons>
           </ion-item>
-          <ion-item lines="none" *ngIf="['owner','admin','staff'].includes(userData.user.role)"> <!--List in Discover-->
-            <ion-label>{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][1]}}<ion-icon name="information-circle" (click)="explainDiscover(i)"></ion-icon></ion-label>
-            <ion-toggle [(ngModel)]="moment.array_boolean[0]"></ion-toggle>
-          </ion-item>
+          <!--Categories-->
+          <ion-item-group *ngIf="['owner','admin','staff'].includes(userData.user.role)">
+            <ion-item *ngIf="categories && categories.length" class="padding-start" lines="none">
+              <ion-label position="stacked">{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][6]}} *</ion-label>
+              <ion-select [interfaceOptions]="{cssClass: 'level-15'}" interface="alert" multiple="true" [(ngModel)]="moment.categories">
+                <ion-select-option *ngFor="let category of categories" [value]="category._id">{{category['en-US'].value}}</ion-select-option>
+              </ion-select>
+            </ion-item>
+            <ion-item lines="none"> <!--List in Discover-->
+              <ion-label>{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][1]}}<ion-icon name="information-circle" (click)="explainDiscover(i)"></ion-icon></ion-label>
+              <ion-toggle [(ngModel)]="moment.array_boolean[0]"></ion-toggle>
+            </ion-item>
+          </ion-item-group>
           <ion-item lines="none"> <!--Share in Marketplace-->
             <ion-label>{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][7]}}</ion-label>
             <ion-toggle [(ngModel)]="moment.array_boolean[1]"></ion-toggle>
           </ion-item>
-          <ion-item *ngIf="moment.array_boolean[0]" class="padding-start" lines="none"> <!--Community-->
-            <ion-label position="stacked">{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][2]}}</ion-label>
-            <ion-select multiple="true" [interfaceOptions]="{cssClass: 'level-15'}" [(ngModel)]="moment.array_community">
-              <ion-select-option *ngFor="let church of churches" [value]="church._id" [class.selected]="church.selected" [disabled]="church._id === '5ab62be8f83e2c1a8d41f894'">{{church.name}}</ion-select-option>
-            </ion-select>
-          </ion-item>
-          <!--Display Community in List View-->
-          <ion-item lines="none" class="ion-margin-start">
-            <ion-icon name="eye" class="moment-label"></ion-icon>
-            <ion-label>{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][8]}}</ion-label>
-            <ion-toggle [(ngModel)]="moment.matrix_number[i][0]"></ion-toggle>
-          </ion-item>
-          <ion-item *ngIf="moment.array_boolean[0] && categories && categories.length" class="padding-start" lines="none">
-            <ion-label position="stacked">{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][6]}} *</ion-label>
-            <ion-select [interfaceOptions]="{cssClass: 'level-15'}" interface="alert" multiple="true" [(ngModel)]="moment.categories">
-              <ion-select-option *ngFor="let category of categories" [value]="category._id">{{category['en-US'].value}}</ion-select-option>
-            </ion-select>
-          </ion-item>
-          <!--Display Category in List View-->
-          <ion-item lines="none" class="ion-margin-start">
-            <ion-icon name="eye" class="moment-label"></ion-icon>
-            <ion-label>{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][9]}}</ion-label>
-            <ion-toggle [(ngModel)]="moment.matrix_number[i][1]"></ion-toggle>
-          </ion-item>
+          <!--Platform-->
+          <ion-item-group *ngIf="moment.array_boolean[0]">
+            <ion-item class="padding-start" lines="none">
+              <ion-label position="stacked">{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][2]}}</ion-label>
+              <ion-select multiple="true" [interfaceOptions]="{cssClass: 'level-15'}" [(ngModel)]="moment.array_community">
+                <ion-select-option *ngFor="let church of churches" [value]="church._id" [class.selected]="church.selected" [disabled]="church._id === '5ab62be8f83e2c1a8d41f894'">{{church.name}}</ion-select-option>
+              </ion-select>
+            </ion-item>
+            <!--Display Platform in List View-->
+            <ion-item lines="none" class="ion-margin-start">
+              <ion-icon name="eye" class="moment-label"></ion-icon>
+              <ion-label>{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][8]}}</ion-label>
+              <ion-toggle [(ngModel)]="moment.matrix_number[i][0]"></ion-toggle>
+            </ion-item>
+            <!--Display Category in List View-->
+            <ion-item lines="none" class="ion-margin-start">
+              <ion-icon name="eye" class="moment-label"></ion-icon>
+              <ion-label>{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][9]}}</ion-label>
+              <ion-toggle [(ngModel)]="moment.matrix_number[i][1]"></ion-toggle>
+            </ion-item>
+          </ion-item-group>
         </ion-item-group>
         <ion-item-group *ngIf="item === 20010"> <!--Slider-->
           <ion-item lines="none">
