basic ugly navigation in the top

--- a/src/app/pages/feature/manage/managefeature.page.scss
+++ b/src/app/pages/feature/manage/managefeature.page.scss
@@ -61,4 +61,8 @@ app-managefeature {
   .bold-font {
     font-weight: bold;
   }
+
+  .selected {
+    --ion-background-color: red !important;
+  }
 }
